# Wallr

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
docs/: ai_pipeline.md  dioxus_0.7_reference.md  image_processing.md
migrations/: 20260507211329_init.sql  20260508134553_add_gin_indexes.sql  20260508154000_add_trending_tags_mv.sql  20260508161230_add_created_at_to_wallpapers.sql  20260508214525_add_is_private.sql  20260509083253_add_performance_indices.sql  20260509090434_add_personal_collections.sql  20260509090716_add_user_follows.sql  20260509090854_add_bio_and_socials.sql  20260509091908_add_wallpaper_comments.sql  20260509095023_optimize_comments.sql  20260509105454_add_audit_logs.sql  20260509105929_add_user_created_at.sql  20260509113209_add_notifications_table.sql  20260509202636_add_password_reset_tokens.sql  20260509203140_add_is_live_to_wallpapers.sql  20260509203741_add_pgvector.sql  20260509211600_add_user_downloads.sql  20260509215444_add_reported_wallpapers.sql  20260510104329_add_oauth_accounts.sql  20260510111456_add_perceptual_hashing.sql  20260510112505_add_collab_indexes.sql  20260510182756_add_playlist_preferences.sql  20260512193334_fix_relational_integrity.sql  20260512205926_add_dmca_claims.sql  20260512210000_add_missing_foreign_keys.sql  20260512212841_add_upload_jobs.sql  20260512220000_fix_search_vector.sql  20260513113824_add_aspect_ratio_index.sql  20260513171550_add_csam_improvements.sql  20260513173102_add_banned_exact_hashes.sql  20260514065106_add_upload_metadata.sql  20260514070726_user_preferences.sql  (+7 more)
(+4 files in other folders)
